Add SAL Briefing: Clariens

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 
     <div class="briefing-list">
         <div class="briefing-item">
+            <a href="clariens.html">Clariens</a>
+            <div class="briefing-date">26 de fevereiro de 2026</div>
+        </div>
+        <div class="briefing-item">
             <a href="juntos-somos-mais.html">Juntos Somos Mais</a>
             <div class="briefing-date">26 de fevereiro de 2026</div>
         </div>
