--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 </head>
 <body>
     <div class="logo">comp</div>
+        <div class="briefing-item">
+            <a href="grupo-via1.html">Grupo Via1</a>
+            <div class="briefing-date">26 de fevereiro de 2026</div>
+        </div>
     <h1>SAL Briefings</h1>
 
     <div class="briefing-list">
