Add SAL Briefing: Alabia

--- a/alabia.html
+++ b/alabia.html
@@ -301,7 +301,7 @@
 
         <ul>
             <li><strong>Segmento de Mercado:</strong> Tecnologia - Robótica e IA para Serviços</li>
-            <li><strong>Modelo de Negócio:</strong> B2B - Serviços de automação com robôs e IA</li>
+            <li><strong>Modelo de Negócio:</strong> B2B - Robôs autônomos + IA para limpeza e delivery</li>
         </ul>
 
         <div class="subsection">
@@ -309,7 +309,7 @@
             <ul>
                 <li><strong>Quantidade de Colaboradores:</strong> 300 colaboradores</li>
                 <li><strong>Modelo Contratação:</strong> 90% CLT, 10% PJ</li>
-                <li><strong>Escritório/s:</strong> São Paulo e Florianópolis + bases em clientes</li>
+                <li><strong>Escritório/s:</strong> São Paulo e Florianópolis + bases nos clientes</li>
                 <li><strong>Modelo de Trabalho:</strong> Híbrido</li>
                 <li><strong>Source do Card:</strong> [Não mencionado]</li>
             </ul>
@@ -318,8 +318,8 @@
         <div class="subsection">
             <h3>1.2 Perguntas ICP</h3>
             <ul>
-                <li><strong>Companhia Pretende Contratar:</strong> Crescimento planejado de 233% - meta de 1000 funcionários até 2026</li>
-                <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> Não há vagas abertas em RH atualmente</li>
+                <li><strong>Companhia Pretende Contratar:</strong> Crescimento de 300 para 1000 funcionários até 2026 (233%)</li>
+                <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> Não há vagas abertas específicas em RH</li>
                 <li><strong>Tem Time Tech (Eng/Dev):</strong> Sim, 10-15% do headcount (~30-45 pessoas)</li>
                 <li><strong>Turnover Ano:</strong> [Não mencionado]</li>
             </ul>
@@ -341,16 +341,16 @@
                 </div>
             </div>
 
-            <div class='org-legend'><div class='legend-item'><span class='legend-badge badge-mql'>MQL</span><span>Participou do MQL</span></div><div class='legend-item'><span class='legend-badge badge-sal'>SAL</span><span>Estará no SAL</span></div></div><div class='org-chart'><div class='org-level'><div class='org-box'><div class='title'>CEO</div><div class='name'>Paulo Teixeira</div><span class='org-badge badge-mql'>MQL</span><span class='org-badge badge-sal'>SAL</span></div></div><div class='org-connector'></div><div class='org-level'><div class='org-box'><div class='title'>RH Generalista</div><div class='name'>Red (ex-Big4)</div></div></div></div>
+            <div class='org-legend'><div class='legend-item'><span class='legend-badge badge-mql'>MQL</span><span>Participou do MQL</span></div><div class='legend-item'><span class='legend-badge badge-sal'>SAL</span><span>Estará no SAL</span></div></div><div class='org-chart'><div class='org-level'><div class='org-box'><div class='title'>CEO</div><div class='name'>Paulo Teixeira</div><span class='org-badge badge-mql'>MQL</span><span class='org-badge badge-sal'>SAL</span></div></div><div class='org-connector'></div><div class='org-level'><div class='org-box'><div class='title'>Head de RH</div><div class='name'>Red (Generalista)</div></div></div></div>
 
             <h4>Stakeholders e Cargos:</h4>
             <ul>
-                <li><strong>Paulo Teixeira</strong> - CEO - Decision maker, participou do MQL</li><li><strong>Red</strong> - RH Generalista - Ex-Big4, advogada, reporta ao CEO</li>
+                <li><strong>Paulo Teixeira</strong> - CEO - Decision maker, participou do MQL</li><li><strong>Red</strong> - Head de RH - Generalista, ex-Big4, formação em direito</li>
             </ul>
 
             <h4>Subdivisões RH:</h4>
             <ul>
-                <li>RH Generalista - Atua como bombeira, lida com escritório advocatício e BPO</li>
+                <li>RH Generalista - Lida com BPO, escritório de advocacia e reporte ao CEO</li>
             </ul>
         </div>
 
@@ -367,28 +367,28 @@
 
     <div class="section">
         <h2>🔥 2. Principais Dores</h2>
-        <div class='pain-box'><h4>Pain 1 - Gestão Manual e Não Padronizada</h4><ul><li><strong>Descrição:</strong> Processos manuais e não estruturados</li><li><strong>Onde aparece:</strong> Gestão diária de pessoas e decisões</li><li><strong>Impacto percebido:</strong> Ineficiência operacional e falta de escalabilidade</li></ul></div><div class='pain-box'><h4>Pain 2 - Dependência de Pessoas vs Processos</h4><ul><li><strong>Descrição:</strong> Decisões baseadas em feeling e não em dados</li><li><strong>Onde aparece:</strong> Promoções, contratações e gestão</li><li><strong>Impacto percebido:</strong> Falta de padronização e escalabilidade</li></ul></div>
+        <div class='pain-box'><h4>Pain 1 - Processos Manuais e Ineficientes</h4><ul><li><strong>Descrição:</strong> Processos de RH muito manuais e dependentes de pessoas</li><li><strong>Onde aparece:</strong> BPO de RH e workflows operacionais</li><li><strong>Impacto percebido:</strong> Baixa eficiência e escalabilidade</li></ul></div><div class='pain-box'><h4>Pain 2 - Falta de Estruturação em RH</h4><ul><li><strong>Descrição:</strong> Head de RH atuando como "bombeiro"</li><li><strong>Onde aparece:</strong> Decisões baseadas em feeling, falta de processos estruturados</li><li><strong>Impacto percebido:</strong> Dificuldade de escalar operação</li></ul></div>
     </div>
 
     <div class="section">
         <h2>💎 3. Hipótese de Valor Inicial</h2>
 
         <h4>Que tipo de problema de People / Rewards isso parece ser?</h4>
-        <p>Compensation Governance e Estruturação de RH</p>
+        <p>People Operations Governance</p>
 
         <h4>Onde acreditamos que está o maior impacto?</h4>
-        <ul><li>Automatização de processos de RH</li><li>Estruturação da governança de remuneração</li><li>Padronização de decisões de pessoas</li></ul>
+        <ul><li>Automatização de processos de RH</li><li>Estruturação de políticas e workflows</li></ul>
     </div>
 
     <div class="section">
         <h2>📋 4. O Que Sabemos</h2>
         <ul>
-            <li><strong>Estrutura / níveis:</strong> Base da pirâmide, maioria ganha até R$3.000</li>
-            <li><strong>Pay decisions:</strong> Não estruturado, baseado em decisões ad hoc</li>
-            <li><strong>Benchmarking:</strong> Se compara com Sodexo, GPS e empresas de facilities</li>
-            <li><strong>Posicionamento Estratégico:</strong> Busca equilíbrio entre mercado bancário e banqueiro</li>
+            <li><strong>Estrutura / níveis:</strong> Base da pirâmide, maioria assistentes/auxiliares</li>
+            <li><strong>Pay decisions:</strong> Sem estrutura formal, baseado em decisões pontuais</li>
+            <li><strong>Benchmarking:</strong> Se compara com empresas de facilities (Sodexo, GPS)</li>
+            <li><strong>Posicionamento Estratégico:</strong> Salários base entre mínimo e 3 mil reais para maioria</li>
             <li><strong>Variável / incentivos:</strong> Apenas comercial tem variável, sem metas estruturadas</li>
-            <li><strong>Ferramentas / vendors:</strong> BPO de RH para processos administrativos</li>
+            <li><strong>Ferramentas / vendors:</strong> BPO de RH para processos operacionais</li>
         </ul>
     </div>
 
@@ -397,12 +397,12 @@
 
         <div class="question-box">
             <h4>🔍 O que ainda não sabemos e é crítico?</h4>
-            <ul><li>Qual o orçamento disponível para investimento em RH?</li><li>Qual o timeline ideal para implementação?</li><li>Como está estruturado o BPO atual e quais processos específicos ele cobre?</li></ul>
+            <ul><li>Qual o orçamento disponível para investimento em RH?</li><li>Qual o timeline ideal para implementação?</li></ul>
         </div>
 
         <div class="question-box">
             <h4>✅ O que precisa ser validado no deep discovery?</h4>
-            <ul><li>Validar escopo exato do HR as a Service vs Comp as a Service</li><li>Confirmar appetite para automatização total dos processos</li><li>Validar possibilidade de implementação em fases</li></ul>
+            <ul><li>Validar escopo exato do HR as a Service vs Comp as a Service</li><li>Confirmar principais prioridades entre processos a serem automatizados</li></ul>
         </div>
     </div>
 
@@ -412,7 +412,7 @@
             <li><strong>Próxima call:</strong> SAL Discovery & Deepening</li>
         </ul>
         <div>
-            <p>Cliente demonstrou forte interesse e fit com solução de HR as a Service, necessitando aprofundamento do escopo.</p><ul><li>Agendar SAL com foco em HR as a Service (já agendado para quinta-feira)</li><li>Preparar demo específica de automatizações</li><li>Mapear processos atuais do BPO para proposta de transição</li></ul>
+            <p>Cliente demonstrou forte interesse no conceito de HR as a Service e automatização de processos. Próxima reunião já agendada.</p><ul><li>Preparar apresentação detalhada do HR as a Service</li><li>Trazer cases práticos de automatização de processos</li><li>Agendar SAL com time técnico para quinta-feira às 16h</li></ul>
         </div>
     </div>
 </body>
