Add SAL Briefing: Alabia

--- a/alabia.html
+++ b/alabia.html
@@ -300,7 +300,7 @@
         <h2>🏢 1. Contexto Geral Empresa</h2>
 
         <ul>
-            <li><strong>Segmento de Mercado:</strong> Tecnologia - Robótica e IA para Serviços</li>
+            <li><strong>Segmento de Mercado:</strong> Tecnologia - Robótica e IA para Automação de Serviços</li>
             <li><strong>Modelo de Negócio:</strong> B2B - Robôs autônomos + IA para limpeza e delivery</li>
         </ul>
 
@@ -309,17 +309,17 @@
             <ul>
                 <li><strong>Quantidade de Colaboradores:</strong> 300 colaboradores</li>
                 <li><strong>Modelo Contratação:</strong> 90% CLT, 10% PJ</li>
-                <li><strong>Escritório/s:</strong> São Paulo e Florianópolis + bases nos clientes</li>
+                <li><strong>Escritório/s:</strong> São Paulo e Florianópolis + operações em clientes</li>
                 <li><strong>Modelo de Trabalho:</strong> Híbrido</li>
-                <li><strong>Source do Card:</strong> [Não mencionado]</li>
+                <li><strong>Source do Card:</strong> Inbound - Prospect viu matéria sobre Series A</li>
             </ul>
         </div>
 
         <div class="subsection">
             <h3>1.2 Perguntas ICP</h3>
             <ul>
-                <li><strong>Companhia Pretende Contratar:</strong> Crescimento de 300 para 1000 funcionários até 2026 (233%)</li>
-                <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> Não há vagas abertas específicas em RH</li>
+                <li><strong>Companhia Pretende Contratar:</strong> Plano de crescimento de 300 para 1000 funcionários até 2026 (233% em 3 anos)</li>
+                <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> Não há vagas abertas em RH atualmente</li>
                 <li><strong>Tem Time Tech (Eng/Dev):</strong> Sim, 10-15% do headcount (~30-45 pessoas)</li>
                 <li><strong>Turnover Ano:</strong> [Não mencionado]</li>
             </ul>
@@ -341,22 +341,22 @@
                 </div>
             </div>
 
-            <div class='org-legend'><div class='legend-item'><span class='legend-badge badge-mql'>MQL</span><span>Participou do MQL</span></div><div class='legend-item'><span class='legend-badge badge-sal'>SAL</span><span>Estará no SAL</span></div></div><div class='org-chart'><div class='org-level'><div class='org-box'><div class='title'>CEO</div><div class='name'>Paulo Teixeira</div><span class='org-badge badge-mql'>MQL</span><span class='org-badge badge-sal'>SAL</span></div></div><div class='org-connector'></div><div class='org-level'><div class='org-box'><div class='title'>Head de RH</div><div class='name'>Red (Generalista)</div></div></div></div>
+            <div class='org-legend'><div class='legend-item'><span class='legend-badge badge-mql'>MQL</span><span>Participou do MQL</span></div><div class='legend-item'><span class='legend-badge badge-sal'>SAL</span><span>Estará no SAL</span></div></div><div class='org-chart'><div class='org-level'><div class='org-box'><div class='title'>CEO</div><div class='name'>Paulo Teixeira</div><span class='org-badge badge-mql'>MQL</span><span class='org-badge badge-sal'>SAL</span></div></div><div class='org-connector'></div><div class='org-level'><div class='org-box'><div class='title'>Head de RH</div><div class='name'>Red (ex-Big4)</div></div></div></div>
 
             <h4>Stakeholders e Cargos:</h4>
             <ul>
-                <li><strong>Paulo Teixeira</strong> - CEO - Decision maker, participou do MQL</li><li><strong>Red</strong> - Head de RH - Generalista, ex-Big4, formação em direito</li>
+                <li><strong>Paulo Teixeira</strong> - CEO - Decision maker, participou do MQL</li><li><strong>Red</strong> - Head de RH - Ex-Big4, advogada, reporta ao CEO</li>
             </ul>
 
             <h4>Subdivisões RH:</h4>
             <ul>
-                <li>RH Generalista - Lida com BPO, escritório de advocacia e reporte ao CEO</li>
+                <li>RH Generalista - Liderado pela Red, foco atual em 'apagar incêndios'</li><li>BPO RH - Terceirizado para processos operacionais</li>
             </ul>
         </div>
 
         <div class="subsection">
             <h3>1.4 Principais Notícias</h3>
-            [Não mencionado]
+            <div class='news-item'><a href='#'>Series A Alabia</a><p>Mencionado pelo prospect como recente</p></div>
         </div>
 
         <div class="subsection">
@@ -367,28 +367,28 @@
 
     <div class="section">
         <h2>🔥 2. Principais Dores</h2>
-        <div class='pain-box'><h4>Pain 1 - Processos Manuais e Ineficientes</h4><ul><li><strong>Descrição:</strong> Processos de RH muito manuais e dependentes de pessoas</li><li><strong>Onde aparece:</strong> BPO de RH e workflows operacionais</li><li><strong>Impacto percebido:</strong> Baixa eficiência e escalabilidade</li></ul></div><div class='pain-box'><h4>Pain 2 - Falta de Estruturação em RH</h4><ul><li><strong>Descrição:</strong> Head de RH atuando como "bombeiro"</li><li><strong>Onde aparece:</strong> Decisões baseadas em feeling, falta de processos estruturados</li><li><strong>Impacto percebido:</strong> Dificuldade de escalar operação</li></ul></div>
+        <div class='pain-box'><h4>Pain 1 - RH Sobrecarregado e Reativo</h4><ul><li><strong>Descrição:</strong> Head de RH atual atua como 'bombeira', focada em resolver problemas urgentes sem conseguir estruturar processos. Citação: 'Hoje a maior função dela é bombeira'</li><li><strong>Onde aparece:</strong> Área de RH como um todo</li><li><strong>Impacto percebido:</strong> Impossibilidade de implementar projetos estruturantes e estratégicos</li></ul></div><div class='pain-box'><h4>Pain 2 - Falta de Processos Estruturados</h4><ul><li><strong>Descrição:</strong> Decisões baseadas em 'feeling', sem processos claros. Citação: 'Fica sempre no feeling humano'</li><li><strong>Onde aparece:</strong> Promoções, contratações, gestão de performance</li><li><strong>Impacto percebido:</strong> Inconsistência nas decisões e dificuldade de escalar</li></ul></div><div class='pain-box'><h4>Pain 3 - Dependência de Operação Manual</h4><ul><li><strong>Descrição:</strong> Processos altamente dependentes de pessoas, com pouca automação. CEO expressou forte desejo por automatização</li><li><strong>Onde aparece:</strong> BPO de RH e processos internos</li><li><strong>Impacto percebido:</strong> Ineficiência operacional e alto custo com BPO</li></ul></div>
     </div>
 
     <div class="section">
         <h2>💎 3. Hipótese de Valor Inicial</h2>
 
         <h4>Que tipo de problema de People / Rewards isso parece ser?</h4>
-        <p>People Operations Governance</p>
+        <p>HR Process Automation & Governance</p>
 
         <h4>Onde acreditamos que está o maior impacto?</h4>
-        <ul><li>Automatização de processos de RH</li><li>Estruturação de políticas e workflows</li></ul>
+        <ul><li>Automação de processos operacionais: Redução da dependência de BPO e processos manuais</li><li>Estruturação de políticas e workflows: Padronização de decisões de people</li><li>Governança de remuneração: Estruturação para suportar crescimento planejado</li></ul>
     </div>
 
     <div class="section">
         <h2>📋 4. O Que Sabemos</h2>
         <ul>
-            <li><strong>Estrutura / níveis:</strong> Base da pirâmide, maioria assistentes/auxiliares</li>
-            <li><strong>Pay decisions:</strong> Sem estrutura formal, baseado em decisões pontuais</li>
-            <li><strong>Benchmarking:</strong> Se compara com empresas de facilities (Sodexo, GPS)</li>
-            <li><strong>Posicionamento Estratégico:</strong> Salários base entre mínimo e 3 mil reais para maioria</li>
-            <li><strong>Variável / incentivos:</strong> Apenas comercial tem variável, sem metas estruturadas</li>
-            <li><strong>Ferramentas / vendors:</strong> BPO de RH para processos operacionais</li>
+            <li><strong>Estrutura / níveis:</strong> Base da pirâmide, salários até R$3mil</li>
+            <li><strong>Pay decisions:</strong> Não estruturado, baseado em feeling</li>
+            <li><strong>Benchmarking:</strong> [Não mencionado]</li>
+            <li><strong>Posicionamento Estratégico:</strong> Posicionamento intermediário para tech ('entre ser bancário e banqueiro')</li>
+            <li><strong>Variável / incentivos:</strong> Apenas comercial, sem metas estruturadas</li>
+            <li><strong>Ferramentas / vendors:</strong> BPO para processos de RH</li>
         </ul>
     </div>
 
@@ -397,12 +397,12 @@
 
         <div class="question-box">
             <h4>🔍 O que ainda não sabemos e é crítico?</h4>
-            <ul><li>Qual o orçamento disponível para investimento em RH?</li><li>Qual o timeline ideal para implementação?</li></ul>
+            <ul><li>Qual o budget disponível para investimento em HR tech/automação?</li><li>Quais são os KPIs específicos de RH que precisam ser melhorados?</li><li>Qual o timeline ideal para implementação, considerando o plano de crescimento?</li><li>Como funciona o processo atual de aprovações/governança em decisões de people?</li></ul>
         </div>
 
         <div class="question-box">
             <h4>✅ O que precisa ser validado no deep discovery?</h4>
-            <ul><li>Validar escopo exato do HR as a Service vs Comp as a Service</li><li>Confirmar principais prioridades entre processos a serem automatizados</li></ul>
+            <ul><li>Validar se há real interesse em internalizar processos hoje em BPO</li><li>Confirmar se há apoio da liderança para automatização de decisões de people</li><li>Verificar se o plano de crescimento para 1000 pessoas tem cronograma definido</li></ul>
         </div>
     </div>
 
@@ -412,7 +412,7 @@
             <li><strong>Próxima call:</strong> SAL Discovery & Deepening</li>
         </ul>
         <div>
-            <p>Cliente demonstrou forte interesse no conceito de HR as a Service e automatização de processos. Próxima reunião já agendada.</p><ul><li>Preparar apresentação detalhada do HR as a Service</li><li>Trazer cases práticos de automatização de processos</li><li>Agendar SAL com time técnico para quinta-feira às 16h</li></ul>
+            <p>Prospect demonstrou forte fit com dores de automação e estruturação de RH. Necessário aprofundar escopo e validar pontos específicos.</p><ul><li>Agendar SAL com participação do CEO e Head de RH</li><li>Preparar demo focada em automação de processos de RH</li><li>Mapear processos atuais do BPO para identificar oportunidades de automação</li></ul>
         </div>
     </div>
 </body>
