--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 <body>
     <div class="logo">comp</div>
         <div class="briefing-item">
+            <a href="alabia.html">Alabia</a>
+            <div class="briefing-date">26 de fevereiro de 2026</div>
+        </div>
+        <div class="briefing-item">
             <a href="makasi.html">Makasí</a>
             <div class="briefing-date">26 de fevereiro de 2026</div>
         </div>
