Add SAL Briefing: Farmoterápica

--- a/farmoterapica.html
+++ b/farmoterapica.html
@@ -301,7 +301,7 @@
 
         <ul>
             <li><strong>Segmento de Mercado:</strong> Indústria Farmacêutica</li>
-            <li><strong>Modelo de Negócio:</strong> Indústria Farmacêutica</li>
+            <li><strong>Modelo de Negócio:</strong> Indústria Farmacêutica B2B</li>
         </ul>
 
         <div class="subsection">
@@ -318,10 +318,10 @@
         <div class="subsection">
             <h3>1.2 Perguntas ICP</h3>
             <ul>
-                <li><strong>Companhia Pretende Contratar:</strong> Expansão planejada para novas plantas fabris</li>
-                <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> Não tem RH local nas regionais</li>
+                <li><strong>Companhia Pretende Contratar:</strong> Sim, expansão planejada focada em contratações para novas plantas fabris</li>
+                <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> Não tem RH local nas regionais, centralizado</li>
                 <li><strong>Tem Time Tech (Eng/Dev):</strong> 0 FTEs</li>
-                <li><strong>Turnover Ano:</strong> Alto turnover mencionado</li>
+                <li><strong>Turnover Ano:</strong> Alto turnover mencionado, sem percentual específico</li>
             </ul>
         </div>
 
@@ -345,7 +345,7 @@
 
             <h4>Stakeholders e Cargos:</h4>
             <ul>
-                <li><strong>Leonardo Kfouri</strong> - Responsável por RH - Principal contato no MQL</li>
+                <li><strong>Leonardo Kfouri</strong> - Responsável por RH - Principal stakeholder na conversa</li>
             </ul>
 
             <h4>Subdivisões RH:</h4>
@@ -367,25 +367,25 @@
 
     <div class="section">
         <h2>🔥 2. Principais Dores</h2>
-        <div class='pain-box'><h4>Pain 1 - Alto Turnover</h4><ul><li><strong>Descrição:</strong> Taxa elevada de turnover</li><li><strong>Onde aparece:</strong> Em toda empresa</li><li><strong>Impacto percebido:</strong> Perda de talentos e custos de reposição</li></ul></div><div class='pain-box'><h4>Pain 2 - Estruturação de RH</h4><ul><li><strong>Descrição:</strong> Falta de processos estruturados de RH</li><li><strong>Onde aparece:</strong> Recrutamento e seleção</li><li><strong>Impacto percebido:</strong> Dificuldade em gestão de pessoas</li></ul></div>
+        <div class='pain-box'><h4>Pain 1 - Alto Turnover</h4><ul><li><strong>Descrição:</strong> Taxa significativa de turnover afetando a operação</li><li><strong>Onde aparece:</strong> Toda a operação</li><li><strong>Impacto percebido:</strong> Perda de talentos e necessidade constante de reposição</li></ul></div><div class='pain-box'><h4>Pain 2 - Falta de Estrutura de RH Local</h4><ul><li><strong>Descrição:</strong> Ausência de RH nas unidades regionais</li><li><strong>Onde aparece:</strong> Plantas fabris regionais</li><li><strong>Impacto percebido:</strong> Dificuldade na gestão de pessoas e processos locais</li></ul></div><div class='pain-box'><h4>Pain 3 - Necessidade de Estruturação de Remuneração</h4><ul><li><strong>Descrição:</strong> Ausência de remuneração variável e necessidade de revisão das práticas salariais</li><li><strong>Onde aparece:</strong> Toda a organização</li><li><strong>Impacto percebido:</strong> Possível impacto na retenção e atração de talentos</li></ul></div>
     </div>
 
     <div class="section">
         <h2>💎 3. Hipótese de Valor Inicial</h2>
 
         <h4>Que tipo de problema de People / Rewards isso parece ser?</h4>
-        <p>Compensation governance</p>
+        <p>Compensation governance & benchmarking, Job architecture & leveling</p>
 
         <h4>Onde acreditamos que está o maior impacto?</h4>
-        <ul><li>Estruturação de cargos e salários</li><li>Retenção de talentos</li></ul>
+        <ul><li>Estruturação de remuneração: Implementação de práticas salariais mais competitivas</li><li>Governança de RH: Estabelecimento de processos e políticas claras</li><li>Retenção: Redução do turnover através de melhor estruturação de carreira e remuneração</li></ul>
     </div>
 
     <div class="section">
         <h2>📋 4. O Que Sabemos</h2>
         <ul>
-            <li><strong>Estrutura / níveis:</strong> Possui tabela salarial antiga de consultoria anterior</li>
+            <li><strong>Estrutura / níveis:</strong> Possui tabela salarial de consultoria anterior</li>
             <li><strong>Pay decisions:</strong> [Não mencionado]</li>
-            <li><strong>Benchmarking:</strong> [Não mencionado]</li>
+            <li><strong>Benchmarking:</strong> Utiliza tabela salarial antiga de consultoria</li>
             <li><strong>Posicionamento Estratégico:</strong> [Não mencionado]</li>
             <li><strong>Variável / incentivos:</strong> Não possui remuneração variável</li>
             <li><strong>Ferramentas / vendors:</strong> [Não mencionado]</li>
@@ -397,12 +397,12 @@
 
         <div class="question-box">
             <h4>🔍 O que ainda não sabemos e é crítico?</h4>
-            <ul><li>Qual o headcount atual?</li><li>Qual o orçamento disponível para projetos de RH?</li><li>Quem são os decisores finais?</li></ul>
+            <ul><li>Qual o headcount atual da empresa?</li><li>Quem são os decisores finais para contratação do projeto?</li><li>Qual o budget disponível para o projeto?</li><li>Quantas contratações estão previstas para as novas plantas?</li><li>Qual a estrutura atual de governança de RH?</li></ul>
         </div>
 
         <div class="question-box">
             <h4>✅ O que precisa ser validado no deep discovery?</h4>
-            <ul><li>Validar números específicos de turnover</li><li>Confirmar plano de expansão e contratações</li></ul>
+            <ul><li>Validar se a tabela salarial antiga ainda tem alguma utilidade prática</li><li>Confirmar se o alto turnover está relacionado principalmente a questões salariais</li><li>Verificar se há outras iniciativas de RH em andamento</li></ul>
         </div>
     </div>
 
@@ -412,7 +412,7 @@
             <li><strong>Próxima call:</strong> SAL Discovery & Deepening</li>
         </ul>
         <div>
-            <p>Cliente demonstrou interesse e tem dores claras que se alinham com nossa solução.</p><ul><li>Agendar SAL com executivo Comp</li><li>Aprofundar entendimento do escopo necessário</li><li>Apresentar proposta comercial</li></ul>
+            <p>Cliente demonstrou dores claras e alinhadas com nossa solução, principalmente em estruturação de remuneração e processos de RH. Momento de expansão torna o timing adequado.</p><ul><li>Agendar SAL com executivo para aprofundamento do diagnóstico</li><li>Preparar benchmark inicial do setor farmacêutico</li><li>Mapear stakeholders adicionais para próxima conversa</li></ul>
         </div>
     </div>
 </body>
