--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             <div class="briefing-date">26 de fevereiro de 2026</div>
         </div>
         <div class="briefing-item">
+            <a href="farmoterapica.html">Farmoterápica</a>
+            <div class="briefing-date">26 de fevereiro de 2026</div>
+        </div>
+        <div class="briefing-item">
             <a href="buildbox.html">Buildbox</a>
             <div class="briefing-date">26 de fevereiro de 2026</div>
         </div>
