--- a/solfacil.html
+++ b/solfacil.html
@@ -301,7 +301,7 @@
 
         <ul>
             <li><strong>Segmento de Mercado:</strong> Fintech B2B2C - Energia Solar</li>
-            <li><strong>Modelo de Negócio:</strong> B2B2C - Fintech e distribuição de kits fotovoltaicos</li>
+            <li><strong>Modelo de Negócio:</strong> B2B2C - Fintech + Distribuição de kits fotovoltaicos</li>
         </ul>
 
         <div class="subsection">
@@ -318,10 +318,10 @@
         <div class="subsection">
             <h3>1.2 Perguntas ICP</h3>
             <ul>
-                <li><strong>Companhia Pretende Contratar:</strong> 20 posições para fechar 400 headcount até fim do ano</li>
+                <li><strong>Companhia Pretende Contratar:</strong> 20 posições a serem preenchidas até final do ano</li>
                 <li><strong>Tem Vaga Aberta/Pretende Abrir em RH:</strong> [Não mencionado]</li>
                 <li><strong>Tem Time Tech (Eng/Dev):</strong> Sim, time de tecnologia é uma das áreas core</li>
-                <li><strong>Turnover Ano:</strong> Alto, com processo estruturado de análise de causa raiz e entrevistas de desligamento</li>
+                <li><strong>Turnover Ano:</strong> Alto, identificado como ponto de atenção</li>
             </ul>
         </div>
 
@@ -367,27 +367,27 @@
 
     <div class="section">
         <h2>🔥 2. Principais Dores</h2>
-        <div class='pain-box'><h4>Pain 1 - Falta de Agilidade em Ajustes Salariais</h4><ul><li><strong>Descrição:</strong> Necessidade de responder rapidamente a movimentações de mercado em áreas específicas (IA, Risco, Modelagem, Pricing) durante o período de 12 meses</li><li><strong>Onde aparece:</strong> Áreas técnicas específicas, principalmente tecnologia e financeira</li><li><strong>Impacto percebido:</strong> Risco de perder talentos por não conseguir ajustar rapidamente às mudanças de mercado</li></ul></div><div class='pain-box'><h4>Pain 2 - Estruturação de Papéis e Responsabilidades</h4><ul><li><strong>Descrição:</strong> Falta de estrutura clara na definição de papéis e responsabilidades</li><li><strong>Onde aparece:</strong> Toda organização</li><li><strong>Impacto percebido:</strong> Afeta pontuação de cargos e enquadramento</li></ul></div><div class='pain-box'><h4>Pain 3 - Alto Turnover</h4><ul><li><strong>Descrição:</strong> Taxa de turnover elevada, especialmente após movimentações organizacionais em 2023</li><li><strong>Onde aparece:</strong> Diversos departamentos</li><li><strong>Impacto percebido:</strong> Necessidade de foco especial em retenção de pessoas-chave</li></ul></div>
+        <div class='pain-box'><h4>Pain 1 - Falta de agilidade na resposta a movimentações de mercado</h4><ul><li><strong>Descrição:</strong> Necessidade de maior velocidade para ajustar tabelas salariais em resposta a movimentos bruscos do mercado, especialmente em áreas críticas como IA, risco, modelagem e pricing</li><li><strong>Onde aparece:</strong> Áreas técnicas específicas (IA, Risco, Modelagem, Pricing) e nova financeira</li><li><strong>Impacto percebido:</strong> Potencial perda de talentos e dificuldade de atração em áreas estratégicas</li></ul></div><div class='pain-box'><h4>Pain 2 - Estruturação incompleta de cargos e responsabilidades</h4><ul><li><strong>Descrição:</strong> Papéis e responsabilidades não estão totalmente definidos e estruturados</li><li><strong>Onde aparece:</strong> Toda a organização</li><li><strong>Impacto percebido:</strong> Afeta pontuação e enquadramento de cargos</li></ul></div><div class='pain-box'><h4>Pain 3 - Alto Turnover</h4><ul><li><strong>Descrição:</strong> Taxa de turnover elevada, especialmente após movimentações organizacionais em 2023</li><li><strong>Onde aparece:</strong> Organização como um todo</li><li><strong>Impacto percebido:</strong> Perda de talentos e necessidade de reposição constante</li></ul></div>
     </div>
 
     <div class="section">
         <h2>💎 3. Hipótese de Valor Inicial</h2>
 
         <h4>Que tipo de problema de People / Rewards isso parece ser?</h4>
-        <p>Compensation governance & benchmarking, Job architecture & leveling</p>
+        <p>Compensation governance & benchmarking + Job architecture & leveling</p>
 
         <h4>Onde acreditamos que está o maior impacto?</h4>
-        <ul><li>Agilidade em benchmarking: Resposta mais rápida a movimentações de mercado em áreas críticas</li><li>Estruturação de cargos: Melhor definição de papéis e responsabilidades</li><li>Retenção: Melhor gestão de talentos-chave através de estrutura mais robusta</li></ul>
+        <ul><li>Áreas técnicas críticas: Maior agilidade nas decisões de pay para áreas como IA, Risco, Modelagem</li><li>Nova financeira: Suporte na estruturação de cargos e remuneração</li><li>Organização geral: Melhor estruturação de cargos e responsabilidades</li></ul>
     </div>
 
     <div class="section">
         <h2>📋 4. O Que Sabemos</h2>
         <ul>
-            <li><strong>Estrutura / níveis:</strong> 4 tabelas salariais diferentes (enablers/backoffice, logística/supply, tecnologia/produto, go to market)</li>
-            <li><strong>Pay decisions:</strong> Baseadas em grades, não em cargos específicos</li>
+            <li><strong>Estrutura / níveis:</strong> 4 tabelas salariais distintas: Enablers (backoffice), Logística/Supply, Tecnologia/Produto, Go to Market</li>
+            <li><strong>Pay decisions:</strong> Decisões baseadas em grades, não em cargos. Grade 13+ elegível para incentivos</li>
             <li><strong>Benchmarking:</strong> Utilizam Towers Watson como principal fonte</li>
             <li><strong>Posicionamento Estratégico:</strong> Busca posicionamento competitivo mas não líder de mercado</li>
-            <li><strong>Variável / incentivos:</strong> ICP para grade 13+, comissão para collection/CX, incentivos por indicadores para CD, ILP via stock options</li>
+            <li><strong>Variável / incentivos:</strong> ICP recém reestruturado, ILP implementado, comissões para áreas específicas (Collection, CX)</li>
             <li><strong>Ferramentas / vendors:</strong> Towers Watson para pesquisa salarial</li>
         </ul>
     </div>
@@ -397,12 +397,12 @@
 
         <div class="question-box">
             <h4>🔍 O que ainda não sabemos e é crítico?</h4>
-            <ul><li>Qual o orçamento disponível para investimento em ferramentas de remuneração?</li><li>Como funciona o processo de aprovação para novas ferramentas/vendors?</li><li>Quais são as métricas específicas de sucesso para um novo projeto de remuneração?</li><li>Qual o timeline ideal para implementação de uma nova solução?</li></ul>
+            <ul><li>Qual o orçamento disponível para investimento em ferramentas de remuneração?</li><li>Como funciona o processo atual de aprovação para ajustes salariais?</li><li>Quais são os principais concorrentes por talentos nas áreas críticas?</li><li>Como está estruturado o processo decisório para implementação de novas ferramentas?</li></ul>
         </div>
 
         <div class="question-box">
             <h4>✅ O que precisa ser validado no deep discovery?</h4>
-            <ul><li>Validar se a dor de agilidade em benchmarking é realmente a principal prioridade</li><li>Confirmar se há budget aprovado para novo investimento em ferramentas de remuneração</li><li>Verificar se a estruturação de cargos é uma prioridade para 2024</li></ul>
+            <ul><li>Validar se o alto turnover está realmente relacionado a questões de remuneração</li><li>Confirmar se a atual pesquisa salarial não atende em termos de agilidade ou dados</li><li>Verificar se há real autonomia do RH para mudança de fornecedor</li></ul>
         </div>
     </div>
 
@@ -412,7 +412,7 @@
             <li><strong>Próxima call:</strong> SAL Discovery & Deepening</li>
         </ul>
         <div>
-            <p>Prospect demonstrou interesse claro e dores alinhadas com nossa solução. Recomenda-se aprofundar entendimento técnico e validar questões comerciais.</p><ul><li>Agendar SAL com demo da plataforma - 26/02 às 9:30</li><li>Preparar benchmark específico para casos de fintech/energia</li><li>Mapear potenciais quick wins em agilidade de benchmarking</li></ul>
+            <p>Cliente demonstrou dores claras e alinhadas com nossa solução, especialmente na necessidade de maior agilidade e estruturação. Próxima etapa deve aprofundar pontos técnicos e apresentar plataforma.</p><ul><li>Agendar SAL com demo da plataforma (já agendado para 26/02 às 9:30)</li><li>Trazer executivo sênior para aprofundar aspectos técnicos</li><li>Preparar demonstração focada em casos de uso para áreas críticas (IA, Risco, Modelagem)</li></ul>
         </div>
     </div>
 </body>
