Add SAL Briefing: Farmoterápica

--- a/farmoterapica.html
+++ b/farmoterapica.html
@@ -397,12 +397,12 @@
 
         <div class="question-box">
             <h4>🔍 O que ainda não sabemos e é crítico?</h4>
-            <ul><li>Qual o tamanho atual da empresa (headcount)?</li><li>Quem são os principais stakeholders envolvidos nas decisões de remuneração?</li><li>Quais são as práticas e ferramentas atuais de gestão de remuneração?</li><li>Quais são os planos de crescimento e contratação para os próximos meses?</li></ul>
+            <ul><li>Qual o tamanho atual da empresa (headcount)?</li><li>Quem são os principais stakeholders envolvidos nas decisões de remuneração?</li><li>Como está estruturado o time de RH/People?</li><li>Quais são os principais desafios atuais relacionados à remuneração?</li><li>Qual o modelo de trabalho atual (remoto/híbrido/presencial)?</li></ul>
         </div>
 
         <div class="question-box">
             <h4>✅ O que precisa ser validado no deep discovery?</h4>
-            <ul><li>Validar estrutura organizacional atual</li><li>Confirmar processo decisório de remuneração</li><li>Verificar práticas atuais de benchmarking salarial</li></ul>
+            <ul><li>Validar estrutura organizacional atual</li><li>Confirmar processo decisório de remuneração</li><li>Verificar ferramentas e práticas atuais de gestão de remuneração</li></ul>
         </div>
     </div>
 
@@ -412,7 +412,7 @@
             <li><strong>Próxima call:</strong> SAL Discovery & Deepening</li>
         </ul>
         <div>
-            <p>Necessário realizar discovery aprofundado para entender melhor o contexto, dores e necessidades da empresa.</p><ul><li>Agendar call de discovery com principais stakeholders</li><li>Mapear estrutura organizacional e processos atuais</li><li>Entender práticas de remuneração e benchmarking</li></ul>
+            <p><strong>Por que essa recomendação:</strong> A transcrição indica uma conversa inicial sem aprofundamento suficiente nos desafios e estrutura atual da empresa</p><ul><li><strong>Abordagem recomendada:</strong> Realizar discovery aprofundado para entender contexto atual, dores específicas e processos de remuneração</li><li><strong>Pontos de atenção:</strong> Necessário mapear stakeholders chave e processo decisório antes de avançar com propostas</li><li><strong>Posicionamento de valor:</strong> Focar inicialmente em entender desafios específicos para então alinhar solução às necessidades da empresa</li></ul>
         </div>
     </div>
 </body>
